@@ -4,6 +4,8 @@ Revision history for DBIx::Class
         - Disable mysql_auto_reconnect for MySQL - depending on the ENV
           it sometimes defaults to on and causes major borkage on older
           DBD::mysql versions
+        - Fix dropped bind values in select/group_by on Oracle (omission
+          from 0542ec57 and 4c2b30d6)
 
 0.08127 2011-01-19 16:40 (UTC)
     * New Features / Changes
